--- a/package.json
+++ b/package.json
@@ -15,5 +15,16 @@
   "bugs": {
     "url": "https://github.com/cds-snc/generic-form-sender-v2/issues"
   },
-  "homepage": "https://github.com/cds-snc/generic-form-sender-v2#readme"
+  "homepage": "https://github.com/cds-snc/generic-form-sender-v2#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.7.1",
+    "postcss-cli": "^6.1.3",
+    "tailwindcss": "^1.1.3"
+  }
 }
