--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express-validator": "^6.2.0",
     "helmet": "^3.21.2",
     "i18n": "^0.8.4",
+    "notifications-node-client": "^4.7.0",
     "nunjucks": "^3.2.0",
     "request": "^2.88.0",
     "tailwindcss": "^1.1.3"
