added env variables to app.json

--- a/app.json
+++ b/app.json
@@ -1,6 +1,14 @@
 {
   "name": "node-starter",
   "description": "",
+  "env": {
+    "AWS_ACCESS_KEY_ID": {
+      "required": true
+    },
+    "AWS_SECRET_ACCESS_KEY": {
+      "required": true
+    },
+  },
   "formation": {},
   "addons": [],
   "buildpacks": [
