--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
     "AWS_SECRET_ACCESS_KEY": {
       "required": true
     },
+    "NOTIFY_API_KEY": {
+      "required": true
+    },
   },
   "formation": {},
   "addons": [],
