--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,9 +24,8 @@ jobs:
         npm test
       env:
         CI: true
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         NOTIFY_API_KEY: ${{ secrets.NOTIFY_API_KEY }}
+        MONGO_URL: ${{ secrets.NOTIFY_API_KEY }}
     - name: npm lint
       run: |
         npm run lint
