--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "@cdssnc/webpack-starter": "^2.0.2",
+    "@csstools/postcss-sass": "^4.0.0",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.3.3",
@@ -37,19 +39,17 @@
     "cssnano": "^4.1.10",
     "csurf": "^1.10.0",
     "dotenv": "^8.2.0",
-    "dynamoose": "^1.11.1",
     "express": "~4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^6.2.0",
     "helmet": "^3.21.2",
     "i18n": "^0.8.4",
-    "notifications-node-client": "^4.7.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "mongoose": "^5.7.11",
+    "notifications-node-client": "^4.7.0",
     "nunjucks": "^3.2.0",
     "request": "^2.88.0",
-    "tailwindcss": "^1.1.3",
-    "@csstools/postcss-sass": "^4.0.0",
-    "@fullhuman/postcss-purgecss": "^1.3.0"
+    "tailwindcss": "^1.1.3"
   },
   "devDependencies": {
     "@aws-cdk/aws-docdb": "1.16.3",
