--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "notifications-node-client": "^4.7.0",
     "nunjucks": "^3.2.0",
     "passport": "^0.4.0",
-    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "request": "^2.88.0",
     "tailwindcss": "^1.1.3"
   },
