changed name from starter app to form sender

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-starter-app",
+  "name": "generic-form-sender-v2",
   "version": "6.0.1",
   "description": "",
   "author": "CDS",
