--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generic-form-sender-v2",
+  "name": "feedback-collector",
   "version": "6.0.1",
   "description": "",
   "author": "CDS",
