--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express-validator": "^6.2.0",
     "helmet": "^3.21.2",
     "i18n": "^0.8.4",
+    "memorystore": "^1.6.1",
     "mini-css-extract-plugin": "^0.8.0",
     "mongoose": "^5.7.11",
     "notifications-node-client": "^4.7.0",
