--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "~1.4.4",
     "cookie-session": "^1.3.3",
     "copy-template-dir": "^1.4.0",
+    "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "cssnano": "^4.1.10",
     "d3-dsv": "^1.2.0",
